--- a/src/test/resources/minitests/debug1.less
+++ b/src/test/resources/minitests/debug1.less
@@ -1,7 +1,10 @@
-@ribbonMargin: 1rem;
-@ribbonOffset: ~"calc("-@ribbonMargin~" - "@ribbonTriangleSize~")";
-@ribbonDistance: ~"calc("@ribbonMargin~" + "@ribbonTriangleSize~")";
-
-div {
-  ribbonOffset: @ribbonOffset;
+contrast {
+  color-normal: contrast(#666666, #101010, #AAAAAA);
+  color-reversed: contrast(#666666, #AAAAAA, #101010);
+  color-normal-treshold: contrast(#666666, #101010, #AAAAAA);
+  color-reversed-treshold: contrast(#666666, #AAAAAA, #101010);
+  color-normal: contrast(#666666, #101010, #AAAAAA, 0.1);
+  color-reversed: contrast(#666666, #AAAAAA, #101010, 0.1);
+  color-normal-treshold: contrast(#666666, #101010, #AAAAAA, 0.1);
+  color-reversed-treshold: contrast(#666666, #AAAAAA, #101010, 0.1);
 }
